# SIFT-Human-Track

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: CMakeLists.txt  main.cpp
